--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,41 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Sarabun:wght@300;400;600&display=swap");
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  line-height: normal;
+  overflow: hidden;
 }
+:root {
+  /* fonts */
+  --drop-menu-menu: Poppins;
+  --font-sarabun: Sarabun;
+  --font-inter: Inter;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  /* font sizes */
+  --font-size-sm: 14px;
+  --font-size-2xs: 11px;
+  --font-size-3xs: 10px;
+  --drop-menu-menu-size: 12px;
+
+  /* Colors */
+  --white: #fff;
+  --color-seagreen-100: #017846;
+  --color-forestgreen: #448e1f;
+  --color-gray: rgba(0, 0, 0, 0.5);
+  --color-lightgray: #cfcfcf;
+  --black: #313144;
+  --blues-gray2: #b8bbc2;
+
+  /* Paddings */
+  --padding-2xs: 11px;
+  --padding-5xl: 24px;
+  --padding-lg: 18px;
+
+  /* Border radiuses */
+  --br-11xl-5: 30.5px;
+  --br-6xs: 7px;
+  --br-7xl: 26px;
+  --br-2xs: 11px;
+  --br-5xs: 8px;
 }
